--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <div class="about-container">
         <div>
           <p class="section-header">Currently</p>
-          <p id="about-txt">I am a 4th year student studying Cognitive Science 
+          <p id="about-txt">I'm a 4th year student studying Cognitive Science 
             (Design / Interaction) at UCSD and I serve as an Industry Relations 
             Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
             to function as the main point of contact between industry partners and the 
@@ -54,7 +54,7 @@
             as a Web Developer in migrating websites and improving content 
             architecture and usability.
             <br/><br/>
-            I am open to UX Design and Developer internship positions for Fall 2019.</p>
+            I'm open to UX Design and Developer internship positions for Fall 2019.</p>
         </div>
       </div>
     </section>
@@ -63,10 +63,10 @@
       <div class="about-container">
         <div>
           <p class="section-header">Past Experience</p>
-          <p id="about-txt">I have had the opportunities to work as a UX Developer 
+          <p id="about-txt">I've had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1">The Center for Applied Internet Data Analysis</a> 
              and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a>. 
-             Apart from being in the office, you can catch me working on or 
+             A part from being in the office, you can catch me working on or 
              brainstorming for my next project.</p>
         </div>
       </div>
@@ -78,7 +78,7 @@
           <p class="section-header">Interests</p>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
-             and shows more than once. Since you’ve read this far, you should probably know my last watched film is <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
+             and shows more than once. My last watched film was <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
         </div>
       </div>
     </section>
