--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
           <p id="about-txt">I'm a 4th year student studying Cognitive Science 
             (Design / Interaction) at UCSD and I serve as an Industry Relations 
             Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
-            to function as the main point of contact between industry partners and the 
-            design organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s ITS department</a> 
+            to function as the main point of contact between companies and the 
+            student organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s ITS department</a> 
             as a Web Developer in migrating websites and improving content 
             architecture and usability.
             <br/><br/>
@@ -66,8 +66,7 @@
           <p id="about-txt">I've had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1">The Center for Applied Internet Data Analysis</a> 
              and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a>. 
-             A part from being in the office, you can catch me working on or 
-             brainstorming for my next project.</p>
+             A part from being in the office, you can find me working on my next project.</p>
         </div>
       </div>
     </section>
@@ -78,7 +77,7 @@
           <p class="section-header">Interests</p>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
-             and shows more than once. My last watched film was <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
+             and shows more than once. The last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
         </div>
       </div>
     </section>
