update hover color

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <section>
       <div class="about-container">
         <div>
-          <p class="section-header">Currently</p>
+          <h2 class="section-header">Currently</h2>
           <p id="about-txt">I'm a 4th year student studying Cognitive Science 
             (Design / Interaction) at UCSD and I serve as an Industry Relations 
             Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
@@ -62,7 +62,7 @@
     <section>
       <div class="about-container">
         <div>
-          <p class="section-header">Past Experience</p>
+          <h2 class="section-header">Past Experience</h2>
           <p id="about-txt">I've had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1">The Center for Applied Internet Data Analysis</a> 
              and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a>. 
@@ -74,7 +74,7 @@
     <section>
       <div class="about-container">
         <div>
-          <p class="section-header">Interests</p>
+          <h2 class="section-header">Interests</h2>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
              and shows more than once. The last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
