update movie, init subdomain

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             (Design / Interaction) at UCSD and I serve as an Industry Relations 
             Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
             to function as the main point of contact between companies and the 
-            student organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s ITS department</a> 
+            student organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s IT services department</a> 
             as a Web Developer in migrating websites and improving content 
             architecture and usability.
             <br/><br/>
@@ -77,7 +77,7 @@
           <h2 class="section-header">Interests</h2>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
-             and shows more than once. The last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/spider-man-far-from-home.jpg"/><span id="movie-txt">Spider-Man</span>.</span></p>
+             and shows more than once. The last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/lion-king.jpg"/><span id="movie-txt">The Lion King</span>.</span></p>
         </div>
       </div>
     </section>
