add icon to work

--- a/caida.html
+++ b/caida.html
@@ -63,16 +63,15 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
-        <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
+        <p>CAIDA homepage:  <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
+        <p>QUINCE platform:  <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
       </div>
     </div>
 
     <div class="body-container">
       <div class="grid"><div><p id="body-header">Tools + Skills</p></div></div>
       <div class="grid">
-        <p>— HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git</p>
-        <p>— Web Application Development, User Interface, Front-End Design</p>
+        <p>HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git + Web Application Development, User Interface, Front-End Design</p>
       </div>
     </div>
 
@@ -165,14 +164,13 @@
     <div class="conclusion-container">
       <div><p id="body-header">Conclusion + Takeaways</p></div>
       <div>
-        <p>Starting off at the internship was a little rough: I had to become 
+        <p>Starting off at the internship was a little rough because I wanted 
+          to dive right in and begin contributing but instead, I had to become 
           familiar with Meteor, get certain dependencies installed on my 
           computer, join services for communication with the team, attain 
           access for special privileges, etc. <br/> <br/>
 
-          However, good things take time and effort. And so, not suprisingly, 
-          progressing through the project and absorbing knowledge from everyone 
-          made it all worth the hassle. Working closely with researchers in 
+          However, I later realized good things take time and effort. And so, not suprisingly, progressing through the project and absorbing knowledge from everyone made it all worth the journey. Working closely with researchers in 
           CAIDA and getting valuable experience working with the collected 
           datasets was a privilege. Working in teams definitely helped advance 
           my design and interpersonal skills because of the opportunities to 
