--- a/quickly.html
+++ b/quickly.html
@@ -63,8 +63,7 @@
     <div class="body-container">
       <div><p id="body-header">Tools + Skills</p></div>
       <div>
-        <p>— HTML, CSS, Python, Flask micro web framework</p>
-        <p>— Web Application Development, User Interface, Responsiveness, Database Management</p>
+        <p>HTML, CSS, Python, Flask micro web framework + Web Application Development, User Interface, Responsiveness, Database Management</p>
       </div>
     </div>
 
