--- a/snaash.html
+++ b/snaash.html
@@ -58,16 +58,15 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Answerer Interface (Ages 50+)</a></p>
-        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A1207&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Asker Interface (All Ages)</a></p>
+        <p>Figma Prototype:  <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Answerer Interface (Ages 50+)</a></p>
+        <p>Figma Prototype:  <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A1207&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Asker Interface (All Ages)</a></p>
       </div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Tools + Skills</p></div>
       <div>
-        <p>— Figma</p>
-        <p>— Need Finding, Information Architecture, Prototyping, Competitive Analysis</p>
+        <p>Figma + Need Finding, Information Architecture, Prototyping, Competitive Analysis</p>
       </div>
     </div>
 
@@ -91,7 +90,7 @@
            guidance. Through their app, you’re able to post a question and 
            receive a thoughtful voice response from someone who may have 
            experienced it before. ” </i><br/><br/>
-           — Shark Tank: COGS 187A Edition</p>
+           Shark Tank: COGS 187A Edition</p>
       </div>
       <div id="first" style="text-align: center;"><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 60%"></div>
     </div>
