--- a/zilter.html
+++ b/zilter.html
@@ -63,16 +63,15 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>Website — <a id="link" href="https://zilterproject.github.io/">https://zilterproject.github.io/</a></p>
-        <p>GitHub Repository — <a id="link" href="https://github.com/zilterproject/zilterproject.github.io">https://github.com/zilterproject/zilterproject.github.io</a></p>
+        <p>Website:  <a id="link" href="https://zilterproject.github.io/">https://zilterproject.github.io/</a></p>
+        <p>GitHub Repository:  <a id="link" href="https://github.com/zilterproject/zilterproject.github.io">https://github.com/zilterproject/zilterproject.github.io</a></p>
       </div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Tools + Skills</p></div>
       <div>
-        <p>— HTML, CSS, Git, Figma</p>
-        <p>— Interaction Design, Need Finding, Prototyping</p>
+        <p>HTML, CSS, Git, Figma + Interaction Design, Need Finding, Prototyping</p>
       </div>
     </div>
 
