--- a/caida.html
+++ b/caida.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="body">
-  <div class="content-margins">
+  <div class="head-container">
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
@@ -59,7 +59,9 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div id="content-margins">
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
@@ -165,8 +167,7 @@
       <div><p id="body-header">Conclusion + Takeaways</p></div>
       <div>
         <p>Starting off at the internship was a little rough because I wanted 
-          to dive right in and begin contributing but instead, I had to become 
-          familiar with Meteor, get certain dependencies installed on my 
+          to dive right in and begin contributing but instead, I had to take the time to become familiar with Meteor, get certain dependencies installed on my 
           computer, join services for communication with the team, attain 
           access for special privileges, etc. <br/> <br/>
 
