--- a/long-term.html
+++ b/long-term.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="body">
-  <div class="content-margins">
+  <div class="head-container">
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-wx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-wx">About</a></div>
@@ -48,7 +48,9 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div id="content-margins">
     <div class="body-container-longterm">
       <div>
         <div class="project-info">
