--- a/quickly.html
+++ b/quickly.html
@@ -19,7 +19,7 @@
 </head>
 
 <body id="body">
-  <div class="content-margins">
+  <div class="head-container">
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
@@ -59,7 +59,9 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div id="content-margins">
     <div class="body-container">
       <div><p id="body-header">Tools + Skills</p></div>
       <div>
