--- a/snaash.html
+++ b/snaash.html
@@ -19,8 +19,8 @@
 </head>
 
 <body id="body">
-  <div class="content-margins">
-    <div id="header">
+  <div class="head-container">
+  	<div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div>
@@ -54,7 +54,9 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div id="content-margins">
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
