undo parallax for home & about

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 </head>
 
 <body id="body">
-  <div class="head-container" style="">
+  <div class="default-top">
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
@@ -41,9 +41,7 @@
     <section>
       <div class="about-pic"><img src="assets/portrait.jpg"></div>
     </section>
-  </div>
 
-  <div id="content-margins" id="about-head-container">
     <section>
       <div class="about-container">
         <div>
