--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body id="body">
-  <div class="head-container">
+  <div class="default-top">
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
@@ -43,9 +43,7 @@
 
     <div id="white-block"></div>
     <div id="color-block"></div>
-  </div>
-
-  <div id="content-margins">
+  
     <p class="section-header">Work & Involvement</p>
     <section>
       <div class="grid-container-right">
