--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           <p id="about-txt">I've had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1">The Center for Applied Internet Data Analysis</a> 
              and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a>. 
-             A part from being in the office, you can find me working on my next project.</p>
+             Apart from being in the office, you can find me working on my next project.</p>
         </div>
       </div>
     </section>
@@ -77,7 +77,7 @@
           <h2 class="section-header">Interests</h2>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
-             and shows more than once. The last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/lion-king.jpg"/><span id="movie-txt">The Lion King</span>.</span></p>
+             and shows more than once. On that note, the last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/lion-king.jpg"/><span id="movie-txt">The Lion King</span>.</span></p>
         </div>
       </div>
     </section>
