--- a/long-term.html
+++ b/long-term.html
@@ -54,18 +54,15 @@
     <div class="body-container-longterm">
       <div>
         <div class="project-info">
-          <p class="project-header">Rocket Countdown</p>
-          <p class="longterm-date">December 2018</p><br/><br/>
+          <p class="project-header">Dropbox Parallax</p>
+          <p class="longterm-date">August 2019</p><br/><br/>
           <p id="longterm-details" class="line-height-160">
              HTML <br/>
-             CSS <br/>
-             JavaScript <br/>
-             Adobe Illustrator <br/><br/>
-             User Interface <br/>
+             CSS <br/><br/>
              Color Theory</p>
         </div>
       </div>
-      <div><img src="assets/long-term/rocket.gif"></div>
+      <div><img src="assets/long-term/dropbox-parallax.gif" style="padding: 4%; background: #EAECEB; width: 92%; border-radius: 5px"></div>
     </div>
 
     <div class="body-container-longterm">
@@ -82,6 +79,23 @@
         </div>
       </div>
       <div><img src="assets/long-term/smile.gif"></div>
+    </div>
+
+    <div class="body-container-longterm">
+      <div>
+        <div class="project-info">
+          <p class="project-header">Rocket Countdown</p>
+          <p class="longterm-date">December 2018</p><br/><br/>
+          <p id="longterm-details" class="line-height-160">
+             HTML <br/>
+             CSS <br/>
+             JavaScript <br/>
+             Adobe Illustrator <br/><br/>
+             User Interface <br/>
+             Color Theory</p>
+        </div>
+      </div>
+      <div><img src="assets/long-term/rocket.gif"></div>
     </div>
 
     <div class="body-container-longterm">
