decr dropbox border, incr bottom margin

--- a/long-term.html
+++ b/long-term.html
@@ -62,7 +62,7 @@
              Color Theory</p>
         </div>
       </div>
-      <div><img src="assets/long-term/dropbox-parallax.gif" style="padding: 4%; background: #EAECEB; width: 92%; border-radius: 5px"></div>
+      <div><img src="assets/long-term/dropbox-parallax.gif" style="padding: 1%; background: #E0E0E0; width: 98%;"></div>
     </div>
 
     <div class="body-container-longterm">
