add long term project

--- a/long-term.html
+++ b/long-term.html
@@ -54,6 +54,19 @@
     <div class="body-container-longterm">
       <div>
         <div class="project-info">
+          <p class="project-header">Day Trip Icons</p>
+          <p class="longterm-date">September 2019</p><br/><br/>
+          <p id="longterm-details" class="line-height-160">
+             Illustrator <br/>
+             Iconography <br/>
+        </div>
+      </div>
+      <div><img src="assets/long-term/camera-gear.jpg"></div>
+    </div>
+
+    <div class="body-container-longterm">
+      <div>
+        <div class="project-info">
           <p class="project-header">Dropbox Parallax</p>
           <p class="longterm-date">August 2019</p><br/><br/>
           <p id="longterm-details" class="line-height-160">
