update day trip project

--- a/long-term.html
+++ b/long-term.html
@@ -57,8 +57,10 @@
           <p class="project-header">Day Trip Icons</p>
           <p class="longterm-date">September 2019</p><br/><br/>
           <p id="longterm-details" class="line-height-160">
-             Illustrator <br/>
-             Iconography <br/>
+             Adobe Illustrator <br/>
+             Iconography <br/><br/>
+             Flat Lay Photography <br/>
+             Branding</p>
         </div>
       </div>
       <div><img src="assets/long-term/camera-gear.jpg"></div>
@@ -72,10 +74,12 @@
           <p id="longterm-details" class="line-height-160">
              HTML <br/>
              CSS <br/><br/>
+             Parallax Scrolling <br/>
              Color Theory</p>
         </div>
       </div>
-      <div><img src="assets/long-term/dropbox-parallax.gif" style="padding: 1%; background: #E0E0E0; width: 98%;"></div>
+      <div><img src="assets/long-term/dropbox-parallax.gif"></div>
+      <!-- style="padding: 1%; background: #E0E0E0; width: 98%;" -->
     </div>
 
     <div class="body-container-longterm">
