update day trip icons

--- a/long-term.html
+++ b/long-term.html
@@ -59,7 +59,7 @@
           <p id="longterm-details" class="line-height-160">
              Adobe Illustrator <br/>
              Iconography <br/><br/>
-             Flat Lay Photography <br/>
+             Flat Lay <br/>
              Branding</p>
         </div>
       </div>
