--- a/about.html
+++ b/about.html
@@ -46,15 +46,15 @@
       <div class="about-container">
         <div>
           <h2 class="section-header">Currently</h2>
-          <p id="about-txt">I'm a 4th year student studying Cognitive Science 
-            (Design / Interaction) at UCSD and I serve as an Industry Relations 
+          <p id="about-txt">I'm a 4th year undergraduate studying Human Computer
+            Interaction (HCI) at UCSD. I serve as an Industry Relations 
             Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
             to function as the main point of contact between companies and the 
             student organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s IT services department</a> 
             as a Web Developer in migrating websites and improving content 
             architecture and usability.
             <br/><br/>
-            I'm open to UX Design and Developer internship positions for Fall 2019.</p>
+            I'm open to UX Engineering and Front-End Devlopment positions for Fall 2019 and Summer 2020.</p>
         </div>
       </div>
     </section>
@@ -77,7 +77,7 @@
           <h2 class="section-header">Interests</h2>
           <p id="about-txt">I may be characterized as an avid basketball fan 
              who consumes chips by the handful and objects to watching movies 
-             and shows more than once. On that note, the last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/lion-king.jpg"/><span id="movie-txt">The Lion King</span>.</span></p>
+             and shows more than once. On that note, the last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/ad-astra.jpg"/><span id="movie-txt">Ad Astra</span>.</span></p>
         </div>
       </div>
     </section>
