update contact, nav

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b">Photography</a></div>
+      <!-- <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -46,15 +46,14 @@
       <div class="about-container">
         <div>
           <h2 class="section-header">Currently</h2>
-          <p id="about-txt">I'm a 4th year undergraduate studying Human Computer
-            Interaction (HCI) at UCSD. I serve as an Industry Relations 
-            Coordinator for <a href="https://designatucsd.org/" id="datu">Design at UCSD</a> 
+          <p id="about-txt">I'm a 4th year undergraduate studying Design & Interaction at UCSD. I serve as an Industry Relations 
+            Coordinator for <a href="http://www.ucsddesign.co" id="datu">Design Co</a> 
             to function as the main point of contact between companies and the 
             student organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s IT services department</a> 
             as a Web Developer in migrating websites and improving content 
             architecture and usability.
             <br/><br/>
-            I'm open to UX Engineering and Front-End Devlopment positions for Fall 2019 and Summer 2020.</p>
+            I'm open to UX Engineering and Front-End Development positions for Winter and Summer 2020.</p>
         </div>
       </div>
     </section>
@@ -85,11 +84,15 @@
     <section>
       <div id="contact">
           <ul>
-            <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
-            <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
-            <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
-            <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">GitHub</a></li>
-            <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
+            <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">+ Email</span></li>
+
+            <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">+ Résumé</a></li>
+
+            <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">+ LinkedIn</a></li>
+
+            <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">+ GitHub</a></li>
+
+            <!-- <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">+ Instagram</a></li> -->
           </ul>
         </div>
     </section>
