--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
-      <div class="nav"><a href="ajzhen.herokuapp.com" id="photo-b">Photography</a></div>
+      <!-- <div class="nav"><a href="ajzhen.herokuapp.com" id="photo-b">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -39,7 +39,7 @@
     </div>
 
     <p id="description">Andrew designs and develops for digital experiences.</p>
-    <p id="description-2">He is a student leader at UC San Diego’s biggest design community and an ITS Web Developer.</p>
+    <p id="description-2">He is a student leader at UC San Diego’s biggest design community and an IT Web Developer.</p>
 
     <div id="white-block"></div>
     <div id="color-block"></div>
@@ -133,11 +133,15 @@
     <section>
       <div id="contact">
         <ul>
-          <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
-          <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
-          <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
-          <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">GitHub</a></li>
-          <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
+          <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">+ Email</span></li>
+
+          <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">+ Résumé</a></li>
+
+          <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">+ LinkedIn</a></li>
+
+          <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">+ GitHub</a></li>
+
+          <!-- <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">+ Instagram</a></li> -->
         </ul>
       </div>
     </section>
