--- a/zilter.html
+++ b/zilter.html
@@ -23,7 +23,7 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div>
+      <!-- <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
