--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section>
       <div id="contact">
         <ul>
-          <li><a id="email" onmouseover="contactChange('email', 'andrewjzhen@gmail.com')" onmouseleave="contactChange('email', '+ Email')">+ Email</a></li>
+          <li><a id="email" onmouseover="contactChange('email', 'andrewjzhen@gmail.com')" onmouseleave="contactChange('email', '+ Email')" onclick="copy('email', 'andrewjzhen@gmail.com')">+ Email</a></li>
 
           <li><a href="assets/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
 
