--- a/caida.html
+++ b/caida.html
@@ -23,7 +23,6 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
-      <!-- <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -96,10 +95,10 @@
            platform to increase participant engagement. Naturally, I spent some
            time researching effective ways to gamify measurement tasks so that 
            they would appeal more to paricipants. As for the visual side, I 
-           worked directly to improve the layout of pages, enhance visualizations 
-           by trying out various icons and images, and implement interactive 
-           elements. I also had to repair visual bugs and design breakdowns for
-           the existing platform. And last but not least, I was tasked with 
+           worked directly to improve the layout of pages, to enhance visualizations 
+           by trying out various icons and images, and to implement interactive 
+           elements. I also repaired visual bugs and design breakdowns on
+           the existing platform. Last but not least, I was tasked with 
            visualizing the participants’ measurement results.</p>
       </div>
     </div>
@@ -109,10 +108,8 @@
       <div>
         <p class="subheader caida-subheader">Consent Form</p>
         <p>The consent form is the first thing participants see when accessing 
-           the web platform. The form was expanded vertically to cover a larger
-           area of the screen than before and a shadow was placed at the bottom
-           of the form to indicate that there is scroll functionality. At a 
-           glance, the consent form is an organized, interactive element that 
+           the web platform. I expanded the form vertically to cover a larger
+           area of the screen than before and a gradient shadow was placed at the bottom of the form to indicate the presence of a scroll functionality. At a glance, the consent form is an organized, interactive element that 
            informs participants.</p>
       </div>
       <div></div>
@@ -124,9 +121,8 @@
         <div>
           <p class="subheader caida-subheader">Tutorial Modal</p>
           <p>The tutorial modal window introduces participants to the interface 
-             and what their jobs are. Originally, the window was much larger to 
-             accomodate a bulkier logo and the oversized font. The redesign 
-             lessened font size and inserted helpful paragraph spacing. The logo 
+             and what their tasks are. Originally, the modal was much larger in order to accomodate a bulkier logo and an oversized font. The redesign 
+             lessens the font size and inserts paragraph spacing. The logo 
              was replaced by a more appropriate sized one and the Continue button 
              was adjusted to sit flush with the edges of the modal window.</p>
         </div>
@@ -139,10 +135,10 @@
       <div>
         <p class="subheader caida-subheader">Sign In Page</p>
         <p>I designed and implemented the onboarding process that includes the 
-           sign-in, sign-up, and forgot password screens. I also conceptualized 
+           sign-in, sign-up, and forgot-password screens. I also conceptualized 
            this design with the other modal windows in mind. I chose a deep 
            green to symbolize the currency that participants may earn through 
-           the web platform. Lastly, I employed adequate negative spacing and contrast.</p>
+           the web platform and I employed adequate spacing and contrast.</p>
       </div>
       <div></div>
       <div><img src="assets/caida/quince-signin.jpg" style="padding-top: 2vw"></div>
@@ -156,8 +152,7 @@
            dug into amCharts, a JavaScript charting and mapping library, to 
            tweak changes within the code. The result is a seamless experience 
            between interacting with the map and visualizing geographical 
-           locations. Notice, there is also a home button for those who get 
-           carried away.</p>
+           locations.There's also a home button for those who get a little carried away.</p>
       </div>
       <div></div>
       <div><img src="assets/caida/quince-map.jpg" style="padding-top: 2vw"></div>
@@ -166,16 +161,14 @@
     <div class="conclusion-container">
       <div><p id="body-header">Conclusion + Takeaways</p></div>
       <div>
-        <p>Starting off at the internship was a little rough because I wanted 
-          to dive right in and begin contributing but instead, I had to take the time to become familiar with Meteor, get certain dependencies installed on my 
-          computer, join services for communication with the team, attain 
-          access for special privileges, etc. <br/> <br/>
+        <p>The onboarding process was a little tricky because I wanted 
+          to dive right in and begin contributing. But instead, I had to take the time to become familiar with Meteor, get certain dependencies installed on my computer, join services for communication with the team and attain 
+          access for other privileges. <br/> <br/>
 
-          However, I later realized good things take time and effort. And so, not suprisingly, progressing through the project and absorbing knowledge from everyone made it all worth the journey. Working closely with researchers in 
-          CAIDA and getting valuable experience working with the collected 
+          However, I later realized that good things take time and effort. Progressing through the project and absorbing knowledge from everyone made it all worth the journey. Working closely with researchers in CAIDA and getting valuable experience working with the collected 
           datasets was a privilege. Working in teams definitely helped advance 
           my design and interpersonal skills because of the opportunities to 
-          receive feedback on my work ranging from mere conceptual ideas to 
+          receive feedback on my work that varied from mere conceptual ideas to 
           high-fidelity quality. <br/> <br/>
 
           Thank you to Ricky for the mentorship and guidance and to Jennifer 
