--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div>
           <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">Summer-long experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="summary">Summer-long, UX Development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
           <p id="year">SUMMER 2018</p>
         </div>
       </div>
@@ -90,7 +90,7 @@
         </div>
         <div>
           <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
-          <p id="summary">Design, prototyping and development of a website concept featuring built-in research done conveniently for you.</p>
+          <p id="summary">Design, prototyping and development of a web application concept featuring built-in research done conveniently for you.</p>
           <p id="year">WINTER 2018 - PRESENT</p>
         </div>
       </div>
