--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
-      <!-- <div class="nav"><a href="ajzhen.herokuapp.com" id="photo-b">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -39,7 +38,7 @@
     </div>
 
     <p id="description">Andrew designs and develops for digital experiences.</p>
-    <p id="description-2">He is a student leader at UC San Diego’s biggest design community and an IT Web Developer.</p>
+    <p id="description-2">He is a student leader at UC San Diego’s largest design community and an IT Web Developer.</p>
 
     <div id="white-block"></div>
     <div id="color-block"></div>
