--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg">
+              <img src="assets/caida/thumbnail.jpg" alt="caida thumbnail">
             </a>
           </div>
         </div>
@@ -66,12 +66,12 @@
         <div id="work-des">
           <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
           <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
-          <p id="year">SUMMER 2018 - PRESENT</p>
+          <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg">
+              <img src="assets/snaash/thumbnail.jpg" alt="snaash thumbnail">
             </a>
           </div>
         </div>
@@ -83,14 +83,14 @@
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/zilter">
-              <img src="assets/zilter/thumbnail.jpg">
+              <img src="assets/zilter/thumbnail.jpg" alt="zilter thumbnail">
             </a>
           </div>
         </div>
         <div>
           <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
           <p id="summary">Design, prototyping and development of a web application concept featuring built-in research done conveniently for you.</p>
-          <p id="year">WINTER 2018 - PRESENT</p>
+          <p id="year">WINTER 2018</p>
         </div>
       </div>
     </section>
@@ -105,7 +105,7 @@
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/quickly">
-              <img src="assets/quickly/thumbnail.jpg">
+              <img src="assets/quickly/thumbnail.jpg" alt="quickly thumbnail">
             </a>
           </div>
         </div>
@@ -117,7 +117,7 @@
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/long-term">
-              <img src="assets/long-term/thumbnail.gif">
+              <img src="assets/long-term/thumbnail.gif" alt="other projects thumbnail">
             </a>
           </div>
         </div>
