--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       </div>
     </div>
 
-    <p id="description">Andrew designs and develops for digital experiences.</p>
-    <p id="description-2">He is a student leader at UC San Diego’s largest design community and an IT Web Developer.</p>
+    <div id="description-div">
+      <p id="description">Andrew designs and develops for digital experiences.</p>
+      <p id="description-2">He is a student leader at UC San Diego’s largest design community and an experienced web developer.</p>
+    </div>
 
     <div id="white-block"></div>
     <div id="color-block"></div>
