--- a/about.html
+++ b/about.html
@@ -26,7 +26,6 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
-      <!-- <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -39,47 +38,37 @@
     </div>
 
     <section>
-      <div class="about-pic"><img src="assets/portrait.jpg"></div>
+      <div class="aboutPic"><img src="assets/portrait.jpg"></div>
     </section>
 
-    <section>
-      <div class="about-container">
-        <div>
-          <h2 class="section-header">Currently</h2>
-          <p id="about-txt">I'm a 4th year undergraduate studying Design & Interaction at UCSD. I serve as an Industry Relations 
-            Coordinator for <a href="http://www.ucsddesign.co" id="datu">Design Co</a> 
-            to function as the main point of contact between companies and the 
-            student organization. I also work under <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UCSD’s IT services department</a> 
-            as a Web Developer in migrating websites and improving content 
-            architecture and usability.
-            <br/><br/>
-            I'm open to UX Engineering and Front-End Development positions for Winter and Summer 2020.</p>
+    <div class="aboutContainer">
+      <section>
+        <div class="aboutSpacing">
+          <p class="aboutTxt">Hi, I'm Andrew! I'm a 4th year undergraduate studying 
+            Design & Interaction at UC San Diego. I'm a web developer for 
+            <a href="http://www.ucsddesign.co" id="dco">Design Co</a> and I 
+            collaborate with student brand and visual designers to implement 
+            designs and prototypes.
         </div>
-      </div>
-    </section>
+      </section>
         
-    <section>
-      <div class="about-container">
-        <div>
-          <h2 class="section-header">Past Experience</h2>
-          <p id="about-txt">I've had the opportunities to work as a UX Developer 
-             at <a href="http://www.caida.org/home/" id="work-1">The Center for Applied Internet Data Analysis</a> 
-             and as a Data Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a>. 
-             Apart from being in the office, you can find me working on my next project.</p>
+      <section>
+        <div class="aboutSpacing">
+          <p class="aboutTxt">I've had the opportunities to work under 
+            <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UC San Diego’s IT
+            services department</a> as a web developer in migrating websites and 
+            improving content architecture and usability and also as a UX developer 
+            at <a href="http://www.caida.org/home/" id="caida">The Center for 
+            Applied Internet Data Analysis</a>.</p>
         </div>
-      </div>
-    </section>
-        
-    <section>
-      <div class="about-container">
+      </section>
+
+      <section>
         <div>
-          <h2 class="section-header">Interests</h2>
-          <p id="about-txt">I may be characterized as an avid basketball fan 
-             who consumes chips by the handful and objects to watching movies 
-             and shows more than once. On that note, the last filmed I watched in theaters was <span id="movie"><img id="movie-img" src="assets/movies/ad-astra.jpg"/><span id="movie-txt">Ad Astra</span>.</span></p>
+          <p class="aboutTxt">Let's get in touch if you're interested in what I do! I like to work with people whenever I can.</p>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <section>
       <div id="contact">
