--- a/index.html
+++ b/index.html
@@ -39,25 +39,26 @@
 
     <div id="description-div">
       <p id="description">Andrew designs and develops for digital experiences.</p>
-      <p id="description-2">He is a student leader at UC San Diego’s largest design community and an experienced web developer.</p>
+      <p id="description-2">He's a ux engineer and an experienced web developer currently helping lead UC San Diego’s largest design community.</p>
     </div>
 
     <div id="white-block"></div>
     <div id="color-block"></div>
   
     <p class="section-header">Work & Involvement</p>
+
     <section>
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg" alt="caida thumbnail">
+            <a href="https://ajzhen.com/snaash">
+              <img src="assets/snaash/thumbnail.jpg" alt="snaash thumbnail">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">Summer-long, UX Development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
+          <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
           <p id="year">SUMMER 2018</p>
         </div>
       </div>
@@ -66,14 +67,14 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
-          <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
+          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
+          <p id="summary">Summer-long, ux development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
           <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg" alt="snaash thumbnail">
+            <a href="https://ajzhen.com/caida">
+              <img src="assets/caida/thumbnail.jpg" alt="caida thumbnail">
             </a>
           </div>
         </div>
@@ -91,13 +92,13 @@
         </div>
         <div>
           <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
-          <p id="summary">Design, prototyping and development of a web application concept featuring built-in research done conveniently for you.</p>
+          <p id="summary">Design, prototyping and development of a web application concept featuring research presented conveniently for you.</p>
           <p id="year">WINTER 2018</p>
         </div>
       </div>
     </section>
       
-    <section>
+    <!-- <section>
       <div class="grid-container-left">
         <div id="work-des">
           <a id="title" href="https://ajzhen.com/quickly">Quickly Web App</a>
@@ -112,21 +113,21 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section>
-      <div class="grid-container-right">
-        <div class="grid-item">
+      <div class="grid-container-left">
+        <div id="work-des">
+          <a id="title" href="https://ajzhen.com/long-term">Extras</a>
+          <p id="summary">A collection of my personal design and development projects.</p>
+          <p id="year">2018 - PRESENT</p>
+        </div>
+        <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/long-term">
               <img src="assets/long-term/thumbnail.gif" alt="other projects thumbnail">
             </a>
           </div>
-        </div>
-        <div>
-          <a id="title" href="https://ajzhen.com/long-term">Long Term</a>
-          <p id="summary">A collection of my personal design and development projects.</p>
-          <p id="year">2018 - PRESENT</p>
         </div>
       </div>
     </section>
