--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/long-term">Extras</a>
+          <a id="title" href="https://ajzhen.com/extras">Extras</a>
           <p id="summary">A collection of my personal design and development projects.</p>
           <p id="year">2018 - PRESENT</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/long-term">
+            <a href="https://ajzhen.com/extras">
               <img src="assets/long-term/thumbnail.gif" alt="other projects thumbnail">
             </a>
           </div>
